<?xml version="1.0"?>
<package>
  <name>nmea2tf</name>
  <version>0.1.0</version>
  <description>Convert NMEA GGA sentence to TF</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/naoki-mizuno/nmea2tf</url>

  <author>Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>python-gdal</run_depend>
</package>
